# littlebeast

./: .gitignore  CLAUDE.md  README.md  requirements.txt
config/: lidar_params.yaml  nav2_params.yaml  robot.yaml  slam_params.yaml
launch/: bringup.launch.py  nav.launch.py  slam.launch.py  teleop.launch.py
robot_base/: package.xml  setup.py
robot_base/robot_base/: base_node.py  gamepad_node.py  serial_comm.py
robot_bringup/: package.xml  setup.py
robot_bringup/rviz/: default.rviz
robot_description/: package.xml  setup.py
robot_description/urdf/: ugv_rover.urdf
robot_web/: camera.py  llm_client.py  main.py  ros_bridge.py
robot_web/static/: index.html
robot_web/static/css/: style.css
robot_web/static/js/: app.js  chat.js  joystick.js  map.js
scripts/: build.sh  setup.sh  start.sh
