<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_description</name>
  <version>0.1.0</version>
  <description>URDF model for UGV Rover</description>
  <maintainer email="robot@local">Robot</maintainer>
  <license>MIT</license>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
